# RoboIchi

./: .gitignore  .gitmodules  TenhouDecoder.py  requirements.txt
bot/: dataloader.py  db_cleaner.py
db/: akarii.db  rii.db
event_extractor/: TenhouDecoder.py  TenhouGameState.py  tenhou_decision_extractor.py  tenhou_decoder.py  tenhou_game_state.py
haipai_ev/: dataloader.py  model.py  train.py
haipai_extractor/: extract.py
libriichi/: Cargo.toml  lib_test.ipynb  lib_test.py  profiler.py
libriichi/src/: consts.rs  lib.rs  tile.rs
libriichi/src/dataset/: gameplay.rs
libriichi/src/state/: obs_repr.rs  player_state.rs
mjlog2json/: Cargo.toml  README.md  lib_test.py
mjlog2json/src/: api.rs  json_calc.rs  json_exporter.rs  json_model.rs  json_parser.rs  json_score.rs  lib.rs  macros.rs  xml_json_conv.rs  xml_parser.rs
mjlog2json/src/mjai_format/: conv.rs  mjai.rs  mod.rs
mjlog2json/src/mjai_format/tenhou/: json_scheme.rs  log.rs  mod.rs  tile.rs
mjlog2json/src/tenhou_format/: calc.rs  exporter.rs  mod.rs  model.rs  parser.rs  score.rs
mjlog2json/src/xml_format/: parser.rs
mortal/: bot.py  mjai_to_tenhou_json.py  model.py  mortal_test.ipynb  two_v_two_runner.py
mortal/mortal/: bot.py  model.py  mortal_dqn.safetensors
mortal/mortal_policy/: config.json  model.py  mortal_dqn.safetensors
rii_extractor/: akarii.ipynb  analysis.ipynb  main.py  modifier.py
shanten_calcs/: __init__.py  agari.py  shanten_calc.py
shanten_calcs/data/: jihai_table.pkl
