[package]
name = "mjlog"
version = "0.1.3"
edition = "2021"
description = "mjlog XML parser"
repository = "/"
documentation = ""
license = "Apache-2.0 OR MIT"

[lib]
name = "mjlog2json"

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.19"
percent-encoding = "2.3.1"
quick-xml = "0.37"
serde = "1.0.219"
serde_derive = "1.0.219"
thiserror = "2.0.11"
pyo3 = "0.27.2"
serde_json = { version = "1.0.139", features = ["preserve_order"] }